2004-09-13  Guillaume Smet <guillaume-gforge@smet.org>
	
	* fixed [#822] Can't send mail with ssmtp

2004-09-13  Christian Bayle <bayle@aist.enst.fr>

	* Reintroduce LDAP stuffs in Group.class and removal of sys_use_ldap
	stuffs in LDAP.class

2004-09-12  Guillaume Smet <guillaume-gforge@smet.org>

	* applied [#845] by Florent Guilleux
	* applied [#866] Comment in generated .ssh/authorized_keys by Matt Hope
	and adapted it for mainstream
	* applied [#883"] sys_show_contact_info by Rob Lanphier
	* internationalized editsshkeys.php
	* applied [#742] Bug fix for #559 Pop-up window by Hidenari Miwa
	* improved Error.class thanks to an idea of Hidenari Miwa (see [#742])
	* fixed localization problems in tracker
	* updated french translation for tracker build boxes feature
	* applied [#797] Tracker Layout by Oliver Blume

2004-09-09  Francisco Gimeno <kikov@kikov.org>

	* www/include/languages/chinese.tab: updated. Applied patch [#890].
	Thx to Finjon Kiang.

2004-08-30  Francisco Gimeno <kikov@kikov.org>

	* www/reporting/toolpie_graph.php: Change Forum.date to 
	Forum.postdate.

2004-08-26  Tony Pugliese <lpajp@pacbell.net>
	* nice patch to add "unlimited extra fields" to tracker.

2004-08-25  Tom Copeland <tom@infoether.com>
	* common/include/utils.php - Silenced several PHP 'notice' warnings.

2004-08-24  Tom Copeland <tom@infoether.com>
	* www/docman/index.php, www/include/features_boxes.php - Silenced 
	several PHP 'notice' warnings.

2004-08-20  Francisco Gimeno <kikov@kikov.org>
	* www/register/projectinfo.php: Solved a bug on [#856] that prevents
	new projects to be created with conditions:
	- sys_use_scm enabled
	- No SCM Plugin installed.
	Fixed a problem when sys_use_scm disabled.

2004-08-12  Francisco Gimeno <kikov@kikov.org>
	* cronjobs/tracker_gateway.php: it's just a migration from forum to
	tracker. It works in the same way. Need to be integrated into
	cronjobs/mail/mailaliases.php.
	
2004-08-09  Tom Copeland <tom@infoether.com>
