@@ -1,3 +1,7 @@
+2004-09-15  Guillaume Smet <guillaume-gforge@smet.org>
+
+	* fixed [#552] by improving language negotiation
+
 2004-09-13  Guillaume Smet <guillaume-gforge@smet.org>
 	
 	* fixed [#822] Can't send mail with ssmtp
